kubernetes/main/apps/flux-system/add-ons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-ext.greyrock.casa
spec:
  ingressClassName: "external-nginx"
  rules:
    - host: &host "flux-receiver-main.greyrock.casa"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
